# orchestration-machine-learning

./: .gitignore  docker-compose.yml
.github/workflows/: cd.yml  ci.yaml  ci.yml
credit_score/: .env.example  Makefile  README.md  prediction.py  pyproject.toml
credit_score/.github/workflows/: ci.yaml
credit_score/dags/: retrain_dag.py
credit_score/frontend/: app.py
credit_score/src/: api.py  config.py  data.py  evaluation.py  features.py  tracking.py  train.py  train_models.py  train_optuna.py
credit_score/tests/: test_api.py
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.frontend  Dockerfile.train
