[project]
name = "credit-score-classifier"
version = "0.1.0"
description = "Classification binaire du score de credit (Good vs Standard/Poor) - Projet MLOps ESGI"
authors = [{ name = "Nabil Sarker", email = "sharkar.nabil@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  # Data
  "pandas>=2.0",
  "numpy>=1.26",
  # ML
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "lightgbm>=4.3",
  "optuna>=3.6",
  "joblib>=1.3",
  "shap>=0.45",
  "numba>=0.61",
  "llvmlite>=0.44",
  # Tracking & Registry
  "mlflow>=2.12",
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "dill>=0.3.9",
  # API
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "httpx>=0.27",
  # Frontend
  "streamlit>=1.30",
  # Utils
  "matplotlib>=3.8",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "ruff>=0.4",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlproject"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = false

[[tool.mypy.overrides]]
module = [
  "sklearn.*",
  "pandas.*",
  "joblib.*",
  "mlflow.*",
  "optuna.*",
  "shap.*",
  "xgboost.*",
  "lightgbm.*",
  "streamlit.*",
  "pymysql.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests"]
